[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-py"
version = "0.1.0"
description = "Python implementation of the OWL aPAKE protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Nicolò Marotta", email = "nick007sbt@gmail.com" }
]
dependencies = [
  "cryptography>=42.0.0",
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]